--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js">
+      document.body.addEventListener('touchmove', function(event) {
+      event.preventDefault();
+    }, { passive: false });
+    </script>
   </body>
 </html>
