--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <style>
+      /* Add this custom CSS to disable pull-to-refresh */
+      body {
+          overscroll-behavior-y: contain;
+      }
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Masegie Handoyo</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js">
-      document.body.addEventListener('touchmove', function(event) {
-      event.preventDefault();
-    }, { passive: false });
+    //   document.body.addEventListener('touchmove', function(event) {
+    //   event.preventDefault();
+    // }, { passive: false });
     </script>
   </body>
 </html>
