--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <style>
       /* Add this custom CSS to disable pull-to-refresh */
       body {
-          overscroll-behavior-y: contain;
+        touch-action: none;
+          
       }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
