--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <style>
       /* Add this custom CSS to disable pull-to-refresh */
-      
-      html {
+      body {
         overflow: hidden;
-        overscroll-behavior: none;
+  overscroll-behavior: none;
+          
       }
-</style>
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Masegie Handoyo</title>
