--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <style>
       /* Add this custom CSS to disable pull-to-refresh */
-      body {
-  overscroll-behavior: none;
-          
+      body,html {
+        overscroll-behavior: none;  
       }
   </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
