--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         overscroll-behavior: none;  
       }
   </style>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <title>Masegie Handoyo</title>
   </head>
   <body>
